--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>my name is sapna and i have willing to learn new things</h1>
+    <h1>hello</h1>
+    <h2>hello</h2>
+    <h3>hello</h3>
+    <h4>hello</h4>
+    <h5>hello</h5>
+    <h6>hello</h6>
+    <p1>my name is sapna and i have willing to learn new things</p1>
+    <p2>my name is sapna and<br> i have willing to learn new things</p2>
+    <p3><br>Lorem ipsum dolor sit amet consectetur adipisicing<br></p3>
+
+    <img src=https://plus.unsplash.com/premium_photo-1751906599954-2f814f94676c?q=80&w=385&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Random Image">
+
+    <img src="https://images.unsplash.com/photo-1682686581413-0a0ec9bb35bb?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=" sea Image">
 </body>
 </html>
